infra/infra/k8s/client-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
        - name: client
          image: christophersesugh/casbytes-client-dev
          # env:
          #   - name: DATABASE_URL
          #     value: "postgresql://content:sesugh185@content-postgres-srv:5432/content_db"
          #   - name: JWT_SECRET
          #     valueFrom:
          #       secretKeyRef:
          #         name: jwt-secret
          #         key: JWT_SECRET
          #   - name: GITHUB_TOKEN
          #     valueFrom:
          #       secretKeyRef:
          #         name: github-token
          #         key: GITHUB_TOKEN
---
apiVersion: v1
kind: Service
metadata:
  name: client-srv
spec:
  selector:
    app: client
  ports:
    - name: client
      protocol: TCP
      port: 5173
      targetPort: 5173
