infra/infra/k8s/ingress-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-gateway
  annotations:
    # nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: casbytes.dev
      http:
        paths:
          - path: /api/auth/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: auth-srv
                port:
                  number: 3000

          # - path: /api/content/?(.*)
          #   pathType: ImplementationSpecific
          #   backend:
          #     service:
          #       name: content-srv
          #       port:
          #         number: 3000

          # - path: /api/progress/?(.*)
          #   pathType: ImplementationSpecific
          #   backend:
          #     service:
          #       name: progress-srv
          #       port:
          #         number: 3000

          - path: /?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: client-srv
                port:
                  number: 5173
